# DNS

./: .gitignore  Dns.php  README.md  api.php  index.php  obfuscate.php
examples/android/: DnsBlockerClient.java  MainActivity.java
examples/c/: dns_blocker_client.c  dns_blocker_client.h  example.c
examples/cpp/: Android.mk  Application.mk  CMakeLists.txt  DnsBlockerClient.cpp  DnsBlockerClient.hpp  GameConfig.h  Protect.h  SoLoader.h  example.cpp  example_lib.cpp
examples/cpp/jni/: ConfigNative.java  DnsBlocker.java  DnsBlocker.kt  DnsBlockerJNI.cpp  DnsBlockerNative.java  GameConfigMgr.java
